--- a/ColoradoTrucking/Pages/CompanySearch.razor
+++ b/ColoradoTrucking/Pages/CompanySearch.razor
@@ -1,4 +1,6 @@
 ﻿@page "/search"
+@using System.Threading.Tasks
+
 
 <h3>CompanySearch</h3>
 
@@ -9,6 +11,7 @@
         <option value="@name"></option>
     }
 </datalist>
+
 
 @code {
     string searchQuery;
@@ -26,20 +29,10 @@
     }
 
     async Task AutoFill(string query) {
-        results = (List<string>)names.Where(name => name.StartsWith(query));
-        StateHasChanged();
+        //Put query or service here
+        await Task.Run(() => results = names.Where(name => name.Contains(query)).ToList());   
+
+    StateHasChanged();
     }
-
-    //List<string> Autofill() {
-    //    List<string> results = new List<string>();
-
-    //    foreach (string name in names) {
-    //        if (name.Contains(SearchQuery)) {
-    //            results.Add(name);
-    //        }
-    //    }
-
-    //    return results;
-    //}
 }
 
