--- a/ColoradoTrucking/Pages/Index.razor
+++ b/ColoradoTrucking/Pages/Index.razor
@@ -1,9 +1,8 @@
 ﻿@page "/"
 @using Components
+@using Models
 
 <h1>Hello, world!</h1>
-
-Welcome to your new app.
 
 @*<DropButton Class="btn-primary">
         <Label>Classes</Label>
@@ -12,7 +11,7 @@ Welcome to your new app.
         </List>
     </DropButton>*@
 
-@{ List<string> sites = new List<string> { "Google", "Yahoo", "Bing" };}
+@*@{ List<string> sites = new List<string> { "Google", "Yahoo", "Bing" };}
 <Dropdown TItem="string" Class="btn-warning">
     <InitialTip>This is a button.</InitialTip>
     <ChildContent>
@@ -20,4 +19,8 @@ Welcome to your new app.
         <DropdownListItem Item="@sites[1]">Yahoo</DropdownListItem>
         <DropdownListItem Item="@sites[2]">Bing</DropdownListItem>
     </ChildContent>
-</Dropdown>
+</Dropdown>*@
+
+<Map></Map>
+
+
