--- a/ColoradoTrucking/_Imports.razor
+++ b/ColoradoTrucking/_Imports.razor
@@ -7,3 +7,4 @@
 @using Microsoft.JSInterop
 @using ColoradoTrucking
 @using ColoradoTrucking.Shared
+@using GeoJson = ColoradoTrucking.Data.Responses.Body;
