--- a/ColoradoTrucking/Components/Map.razor
+++ b/ColoradoTrucking/Components/Map.razor
@@ -7,7 +7,7 @@
     @code {
         protected override async Task OnAfterRenderAsync(bool firstRender) {
             if (firstRender) {
-                await JSRuntime.InvokeVoidAsync("initMap", null);
+                await JSRuntime.InvokeVoidAsync("initMap");
                 StateHasChanged();
             }
         }
