Added map filter, cham rating in db, and colored markers to reflect the ratings

--- a/ColoradoTrucking/Components/Map.razor
+++ b/ColoradoTrucking/Components/Map.razor
@@ -1,7 +1,10 @@
 ﻿@inject IJSRuntime JSRuntime
 @namespace Components
 
-<div class="container" id="map" style="height:500px"/>
+<div class="col-10 offset-1">
+    <div class="container" id="map" style="height:500px" />
+</div>
+
 
 
     @code {
