--- a/ColoradoTrucking/Pages/_Host.cshtml
+++ b/ColoradoTrucking/Pages/_Host.cshtml
@@ -14,6 +14,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
+    <link href="_content/Blazored.Typeahead/blazored-typeahead.css" rel="stylesheet" />
 </head>
 <body>
     <app>
@@ -32,8 +33,9 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQVB6OPOABt5C4J_1CthO9yQbKAwIf5wg&callback=initMap"></script>
-    <script src="~/js/GoogleMap.js"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQVB6OPOABt5C4J_1CthO9yQbKAwIf5wg&callback=initMap"></script>
+    <script async src="~/js/GoogleMap.js"></script>
+    <script src="_content/Blazored.Typeahead/blazored-typeahead.js"></script>
     <script src="https://kit.fontawesome.com/2a13dcb654.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
