--- a/ColoradoTrucking/Pages/CompanySearch.razor
+++ b/ColoradoTrucking/Pages/CompanySearch.razor
@@ -9,37 +9,37 @@
 
 <!-- #region Original Search-->
 <!--Input box and search button-->
-<form>
-    <div class="col-10 offset-1">
-        <div class="form-row form-group">
-            <div class=" col-11">
-                <input class="search form-control" id="search" list="results" @bind="@SearchQuery" @bind:event="oninput" @onchange="GetSelected" />
+    <form>
+        <div class="col-10 offset-1">
+            <div class="form-row form-group">
+                <div class=" col-11">
+                    <input class="search form-control" id="search" list="results" @bind="@SearchQuery" @bind:event="oninput" @onchange="GetSelected" autocomplete="off" />
+                </div>
+                <div class="col-1">
+                    <button type="button" class="btn btn-primary" @onclick="RenderMap"><img class="@GetSearchClass()" src="@GetSearchIcon()"/></button>
+                </div>
             </div>
-            <div class="col-1">
-                <button type="button" class="btn btn-primary" @onclick="RenderMap"><i class="fas fa-search"></i></button>
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-12">
-                <div class="row">
-                    <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3">
-                        <input type="radio" class="form-check-inline" name="filter" id="all" value="0" @onchange="FilterChange" checked="@(filterChoice == 0)" /><label for="all">Show all results</label>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3">
-                        <input type="radio" class="form-check-inline" name="filter" id="cham" value="1" @onchange="FilterChange" checked="@(filterChoice == 1)" /><label for="cham">Only chameleons</label>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3">
-                        <input type="radio" class="form-check-inline" name="filter" id="noCham" value="2" @onchange="FilterChange" checked="@(filterChoice == 2)" /><label for="noCham">Only non-chameleons</label>
+            <div class="form-row">
+                <div class="form-group col-12">
+                    <div class="row">
+                        <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3">
+                            <input type="radio" class="form-check-inline" name="filter" id="all" value="0" @onchange="FilterChange" checked="@(filterChoice == 0)" /><label for="all">Show all results</label>
+                        </div>
+                        <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3">
+                            <input type="radio" class="form-check-inline" name="filter" id="cham" value="1" @onchange="FilterChange" checked="@(filterChoice == 1)" /><label for="cham">Only chameleons</label>
+                        </div>
+                        <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3">
+                            <input type="radio" class="form-check-inline" name="filter" id="noCham" value="2" @onchange="FilterChange" checked="@(filterChoice == 2)" /><label for="noCham">Only non-chameleons</label>
+                        </div>
                     </div>
                 </div>
             </div>
+
         </div>
-    </div>
-</form>
+    </form>
 
 <!--Datalist that holds autocomplete dropdown values-->
 <datalist id="results">
-    @if (!string.IsNullOrEmpty(searchQuery)) {
         @if (@companyList.Count > 0) {
             <!--Add city values to list-->
             @foreach (var city in companyList.Select(e => e.properties.inCity).Distinct().Take(5)) {
@@ -53,9 +53,6 @@
             @foreach (var company in companyList.Take(5)) {
                 <option value="@company.properties.inName ~ @company.properties.GetAddress()"></option>
             }
-        }
-        else {
-            <option value="Sorry, no results!"></option>
         }
     }
 </datalist>
@@ -88,16 +85,17 @@
     //Event callback to pass the json to parent component
     [Parameter]
     public EventCallback<GeoJson> LocationChanged { get; set; }
+    [Parameter]
+    public EventCallback<bool> Searching { get; set; }
 
     //Generates data from database
     async Task AutoFill(string query) {
         try {
-
+            isSearching = true;
             noResults = false;
             currentSearchCts?.Cancel();
             currentSearchCts = new CancellationTokenSource();
             var cancellationToken = currentSearchCts.Token;
-            autoList = new List<string>();
 
             // Wait 500ms before sending request
             await Task.Delay(200);
@@ -111,6 +109,7 @@
             }
             //Notify component to redraw
             StateHasChanged();
+            isSearching = false;
         }
         catch (Exception ex) {
             Console.Error.WriteLine(ex.Message + " " + ex.StackTrace);
@@ -134,15 +133,15 @@
             Func<Feature, bool> filter =
             (filterChoice) switch
             {
-                0 => (feature => 1 == 1),
+                0 => (feature => feature.properties.flag >= 0),
                 1 => (feature => feature.properties.flag > 0),
                 2 => (feature => feature.properties.flag == 0),
-                _ => (feature => 1 == 1)
+                _ => (feature => feature.properties.flag >= 0)
             };
 
             //If zip selected, return all values with that zip code
             if (zipPattern.IsMatch(location)) {
-                geoJson = new GeoJson(companyList.Where(feature => feature.properties.inZip.Equals(location)).Where(filter).ToList<Feature>());
+                geoJson = new GeoJson(companyList.Where(feature => feature.properties.inZip.StartsWith(location)).Where(filter).ToList<Feature>());
             }
             //If city selected, return all values in that city
             else if (cityPattern.IsMatch(location)) {
@@ -150,9 +149,11 @@
             }
             //Else default to address
             else {
+                Console.WriteLine(location);
                 int pos = location.IndexOf('~');
                 location = location.Substring(0, pos - 1);
-                geoJson = new GeoJson(companyList.Where(feature => feature.properties.inName.StartsWith(location)).ToList<Feature>());
+                Console.WriteLine(location);
+                geoJson = new GeoJson(companyList.Where(feature => feature.properties.inName.Contains(location)).ToList<Feature>());
                 Console.WriteLine(geoJson);
             }
 
@@ -167,17 +168,23 @@
                 LocationChanged.InvokeAsync(geoJson);
             }
         }
-        catch (ArgumentNullException) {}
+        catch (ArgumentNullException) { }
     }
 
     void FilterChange(ChangeEventArgs e) {
         filterChoice = Convert.ToInt32(e.Value);
     }
+
+    string GetSearchClass() {
+        return isSearching ? "" : "fas fa-search";
+    }
+    string GetSearchIcon() {
+        return isSearching ? "../img/searching.gif" : "";
+    }
 }
 
 <!-- #endregion API Call Method-->
 <!-- #endregion Original Search-->
-
 <!-- #region Scaffold Method -->
 @*@code{
     string searchQuery;
