--- a/ColoradoTrucking/Shared/MainLayout.razor
+++ b/ColoradoTrucking/Shared/MainLayout.razor
@@ -1,15 +1,40 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="sidebar">
-    <NavMenu />
-</div>
+    <div class="main">
+        <div class="top-row px-4">
+            <a href="/" target="_blank" id="logo">Sureship</a>
+            <a href="/ReportBug" target="_blank">Report Bugs</a>
+            <a href="/Dispute" target="_blank">Dispute</a>
+        </div>
 
-<div class="main">
-    <div class="top-row px-4">
-        <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-    </div>
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark justify-content-between">
 
-    <div class="content px-4">
-        @Body
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#"><strong>SURESHIP</strong></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            About
+                            <!-- <span class="sr-only">(current)</span> -->
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <div class="content px-4">
+            @Body
+        </div>
     </div>
-</div>
