--- a/ColoradoTrucking/wwwroot/css/site.css
+++ b/ColoradoTrucking/wwwroot/css/site.css
@@ -1,11 +1,70 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
+.navbar navbar-expand-lg fixed-top navbar-dark bg-dark justify-content-between {
+    background-color: black;
+}
+
+.topPart {
+    background-image: url("/img/maxresdefault.jpg");
+    width: 100%;
+    padding-left: 2%;
+    height: 500px;
+}
+
+#resultsTable{
+    margin-top:220px;
+}
+
+.mapAlign{
+    margin:0;
+    padding-left:2%;
+}
+
+.form-control {
+    width: 500px;
+}
+
+.mobileNAV {
+    display: none;
+}
+
+.headline {
+    padding-left: 10px;
+}
+
+.fa-1x {
+    font-size: 1.5rem;
+}
+
+.navbar-toggler.toggler-example {
+    cursor: pointer;
+}
+
+.dark-blue-text {
+    color: #0A38F5;
+}
+
+.dark-pink-text {
+    color: #AC003A;
+}
+
+.dark-amber-text {
+    color: #ff6f00;
+}
+
+.dark-teal-text {
+    color: #004d40;
+}
+
+
+
+
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Arial Black', sans-serif;
 }
 
 a, .btn-link {
-    color: #0366d6;
+    color: white;
 }
 
 .btn-primary {
@@ -24,81 +83,29 @@ app {
     height: 3.5rem;
     display: flex;
     align-items: center;
+    background-color: black;
+    justify-content:flex-end;
 }
 
 .main {
+    background-color: lightgreen;
     flex: 1;
 }
 
-    .main .top-row {
-        background-color: #f7f7f7;
-        border-bottom: 1px solid #d6d5d5;
-        justify-content: flex-end;
+
+    .main .top-row > a, .main .top-row .btn-link {
+        white-space: nowrap;
+        margin-left: 1.5rem;
     }
 
-        .main .top-row > a, .main .top-row .btn-link {
-            white-space: nowrap;
-            margin-left: 1.5rem;
-        }
-
-.main .top-row a:first-child {
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-.sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
-}
-
-    .sidebar .top-row {
-        background-color: rgba(0,0,0,0.4);
+    .main .top-row a:first-child {
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
-
-    .sidebar .navbar-brand {
-        font-size: 1.1rem;
-    }
-
-    .sidebar .oi {
-        width: 2rem;
-        font-size: 1.1rem;
-        vertical-align: text-top;
-        top: -2px;
-    }
-
-    .sidebar .nav-item {
-        font-size: 0.9rem;
-        padding-bottom: 0.5rem;
-    }
-
-        .sidebar .nav-item:first-of-type {
-            padding-top: 1rem;
-        }
-
-        .sidebar .nav-item:last-of-type {
-            padding-bottom: 1rem;
-        }
-
-        .sidebar .nav-item a {
-            color: #d7d7d7;
-            border-radius: 4px;
-            height: 3rem;
-            display: flex;
-            align-items: center;
-            line-height: 3rem;
-        }
-
-            .sidebar .nav-item a.active {
-                background-color: rgba(255,255,255,0.25);
-                color: white;
-            }
-
-            .sidebar .nav-item a:hover {
-                background-color: rgba(255,255,255,0.1);
-                color: white;
-            }
 
 .content {
     padding-top: 1.1rem;
+    background-color: lawngreen;
 }
 
 .navbar-toggler {
@@ -129,12 +136,12 @@ app {
     z-index: 1000;
 }
 
-#blazor-error-ui .dismiss {
-    cursor: pointer;
-    position: absolute;
-    right: 0.75rem;
-    top: 0.5rem;
-}
+    #blazor-error-ui .dismiss {
+        cursor: pointer;
+        position: absolute;
+        right: 0.75rem;
+        top: 0.5rem;
+    }
 
 @media (max-width: 767.98px) {
     .main .top-row:not(.auth) {
@@ -147,6 +154,11 @@ app {
 
     .main .top-row a, .main .top-row .btn-link {
         margin-left: 0;
+    }
+
+    .mobileNAV {
+        display: block;
+        text-align: right;
     }
 }
 
