Levi Update JS Issue Check 4-5

--- a/ColoradoTrucking/Pages/Index.razor
+++ b/ColoradoTrucking/Pages/Index.razor
@@ -9,7 +9,6 @@
 
              <Map></Map>
 
-        <button type="button" class="btn btn-dark btn-large" onclick="ChangeH1()">SEARCH</button>
     </section>
 
 <table class="table" id="resultsTable">
@@ -17,9 +16,12 @@
         <tr>
             <th scope="col">#</th>
             <th scope="col"> DOT ID</th>
-            <th scope="col">County</th>
+            <th scope="col">Name</th>
+            <th scope="col">City</th>
             <th scope="col">Address</th>
-            <th scope="col">Address</th>
+            <th scope="col">Phone</th>
+            <th scope="col">Reason</th>
+            <th scope="col">FlagCode</th>
         </tr>
     </thead>
     <tbody id="toPopulate">
