--- a/ColoradoTrucking/_Imports.razor
+++ b/ColoradoTrucking/_Imports.razor
@@ -6,5 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using ColoradoTrucking
+@using ColoradoTrucking.Data
 @using ColoradoTrucking.Shared
+@using Microsoft.AspNetCore.Components
 @using GeoJson = ColoradoTrucking.Data.Responses.Body;
