--- a/ColoradoTrucking/Pages/_Host.cshtml
+++ b/ColoradoTrucking/Pages/_Host.cshtml
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <script async src="~/js/GoogleMap.js"></script>
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQVB6OPOABt5C4J_1CthO9yQbKAwIf5wg&callback=initMap"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=[GOOGLE_MAPS_JS_API_KEY]&callback=initMap"></script>
     <link href="css/addons/datatables.min.css" rel="stylesheet">
     <link href="scss/addons/_datatables.scss" rel="stylesheet">
 
@@ -39,7 +39,7 @@
     <script src="_framework/blazor.server.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/addons/datatables.min.js" type="text/javascript"></script>
-    <script src="https://kit.fontawesome.com/2a13dcb654.js"></script>
+    <script src="https://kit.fontawesome.com/[FONTAWESOME_API_KEY].js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.20/js/jquery.dataTables.min.js"></script>
     <script src="~/js/ResultTable.js"></script>
